<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="entry_fragment1">1</string>
    <string name="entry_fragment2">2</string>
    <string name="entry_fragment3">3</string>
    <string name="entry_ok">进入</string>
    <string name="app_name">Demo</string>
    <string name="favorite">这是最爱界面</string>
    <string name="square">这是广场界面</string>
    <string name="my">这是我界面</string>
    <string name="fragment_square">广场</string>
    <string name="fragment_favorite">最爱</string>
    <string name="fragment_my">我</string>
    <string name="videoplay_fav_txt">收藏</string>
    <string name="videoplay_cm1_txt">TestCM1</string>
    <string name="videoplay_cm2_txt">TestCM2</string>
    <string name="videoplay_cm3_txt">TestCM3</string>
    <string name="videoplay_recommand">推荐</string>
    <string name="answer_correct_congratulation">恭喜你，答对了</string>
    <string name="answer_incorrect">真遗憾，答错了，再接再厉！</string>
    <string name="button_right">right</string>
    <string name="button_wrong">wrong</string>
    <string name="play">播放</string>
    <string name="stop">暂停</string>
    <string name="retry">重播</string>
    <string name="drop_bonus">天降红包</string>
    <string name="bonus_detail">$$$元</string>
    <string name="bonus_hint">已存入您的红包</string>
    <string name="wallet">钱包</string>
    <string name="nikename">NikeName</string>
    <string name="username">UserName : #####</string>
    <string name="title_my">我的账户</string>
    <string name="wallet_title_my">我的钱包</string>

    <string name="category_favorite_my">　　类别　　</string>
    <string name="sex_favorite_my">　　性别　　</string>
    <string name="age_favorite_my">　　年龄　　</string>
    <string name="confirm_favorite_my">　　确定　　</string>
    <string name="waiting_message_favorite_my">正在为您挑选中...</string>
    <string name="changeaccount">切换账户</string>

    <string name="my_phone">账  户：</string>
    <string name="my_phone_hint">请输入用户名或手机号</string>
    <string name="my_password_title">密  码：</string>
    <string name="my_password_hint">请输入密码</string>
    <string name="my_login">登  录</string>
    <string name="my_forget_password">忘记密码</string>
    <string name="my_wallet_title">我的钱包</string>
    <string name="my_order_title">我的订单</string>
    <string name="my_shoppingcart_title">我的购物车</string>
    <string name="my_setting_title">设置</string>
    <string name="my_versionupdate_title">版本更新</string>
    <string name="my_introduction_title">了解功能</string>
    <string name="my_customservice_title">客服</string>

    <string name="shoppingcart_item_plus">+</string>
    <string name="shoppingcart_item_minus">-</string>
    <string name="shoppingcart_item_totalvalue">合计：¥</string>
    <string name="shoppingcart_item_description">描述：</string>
    <string name="shoppingcart_item_name">商品名称：</string>
    <string name="shoppingcart_item_eachvalue">单价：¥</string>
    <string name="shoppingcart_checkout">去结算</string>
    <string name="shoppingcart_checkout_title">确认订单</string>

    <string name="my_wallet_item_balance">余额</string>
    <string name="my_wallet_item_bonus">红包收入</string>
    <string name="my_wallet_item_coupon">优惠券</string>
    <string name="my_wallet_item_money_unit">元</string>
    <string name="my_wallet_item_coupon_unit">张</string>

    <string name="order_oper_pay_immediately"> 立刻付款 </string>
    <string name="order_oper_extend_receipt"> 延长收货 </string>
    <string name="order_oper_search_logistics"> 查看物流 </string>
    <string name="order_oper_confirm_receipt"> 确认收货 </string>
    <string name="order_oper_reminder_delivery"> 提醒发货 </string>
    <string name="order_oper_cancel_order"> 取消订单 </string>
    <string name="order_oper_delete_order"> 删除订单 </string>
    <string name="order_oper_appraise"> 评价 </string>
    <string name="order_item_num">x</string>
    <string name="order_item_total_value"> 合计：¥</string>
    <string name="order_item_totalnum"> 共$$$件商品 </string>
    <string name="order_item_replacenum">$$$</string>
    <string name="order_item_description">描述：</string>
    <string name="order_item_name">商品名称：</string>
    <string name="order_item_eachvalue">单价：¥</string>

    <string name="order_status_unknown">未知状态</string>
    <string name="order_status_waitfor_pay">待支付</string>
    <string name="order_status_waitfor_delivery">待发货</string>
    <string name="order_status_waitfor_receipt">待收货</string>
    <string name="order_status_waitfor_comments">待评价</string>
</resources>