<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"></LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/viedo_play_fav"
            android:background="@drawable/favorite_unselected"
            android:layout_width="50dp"
            android:layout_height="50dp">
        </ImageView>
        <TextView
            android:id="@+id/video_play_fav_content"
            android:text="@string/videoplay_fav_txt"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="40dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/videoplay_recommand"
            android:text="@string/videoplay_recommand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="40dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/videoplay_cm1_txt"
            android:text="@string/videoplay_cm1_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="40dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/videoplay_cm2_txt"
            android:text="@string/videoplay_cm2_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="40dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/videoplay_cm3_txt"
            android:text="@string/videoplay_cm3_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="40dp">
        </TextView>
    </LinearLayout>

</LinearLayout>