<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <ImageView
            android:contentDescription="@string/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/favorite_selected" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/entry_fragment3"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:onClick="gotoMainScreen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/entry_ok"
        android:textSize="20sp" />

</RelativeLayout>