<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/title_my"
                android:gravity="center"
                android:textSize="20dp"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_my_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:contentDescription="@string/my"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:src="@drawable/my_selected" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/my"-->
        <!--android:textSize="20sp" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/square_selected" />

                    <TextView
                        android:id="@+id/nikename"
                        android:layout_toRightOf="@+id/user_photo"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:text="@string/nikename"
                        android:gravity="center"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_toRightOf="@+id/user_photo"
                        android:layout_below="@+id/nikename"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:text="@string/username"
                        android:gravity="center"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/favorite_selected"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/my_setting_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

</LinearLayout>